ecmascript/parser/tests/typescript-errors/class/declare-class-method/input.ts.stderr
error: `declare` modifier cannot appear on class elements of this kind
 --> $DIR/tests/typescript-errors/class/declare-class-method/input.ts:2:5
  |
2 |     declare m1(): string;
  |     ^^^^^^^

